--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGODB_URI = mongodb://127.0.0.1:27017/tiendaweb-mongo
-
+#Variable de la ruta a la base de datos
+#MONGODB_URI = mongodb://127.0.0.1:27017/tiendaweb-mongo
+MONGODB_URI = mongodb+srv://danielzam:12345@tiendanube.ud1wikz.mongodb.net/?retryWrites=true&w=majority
 PORT = 3000
